Only keep mysql log from the last session

Previously mysql.err.old would grow infinively and reaching multiple
dozens of gigabit in some cases. With this change we keep the log from
the current session in mysql.err and from the previous session in
mysql.err.old only.

BUG: 456983